updated-css-responsiveandlogo

--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
                 <li><a href="search-history">Search History</a></li>
                 <li><a href="event-info">Details of the Event</a></li>
             </ul>
-        </nav>    
+        </nav> 
+        <section class="container-avatar"> 
+                <div class="avatar">
+                    <div clas="avatar soul">
+                    </div>
+        </section>
     <main class="container">
         <section  class="row justify-center">
             <!-- Section for List of Events, details being pulled from SeatGeek API -->
