fixed header text, color

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <!--  Header & Sticky Navigation bar created with Tailwind CSS-->
  
-    <header class="header sticky top-0 bg-white shadow-md flex items-center justify-between px-8 py-02">
+    <header id="headerTO" class="header sticky top-0 bg-white shadow-md flex items-center justify-between px-8 py-02">
         <!-- logo to be added-->
         <h1 class="w-1/4" id="avatar"> 10 Things To Do In Toronto </h1>
 
