Updated date/time format again

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 
     <main class="container">
-        <section class="row justify-center">
+        <section class="row justify-center" id>
             <!-- Section for List of Events, details being pulled from SeatGeek API -->
             <article id="event-list" class="container center" class="card-column">
                 <h4>List of Events</h4>
