--- a/index.html
+++ b/index.html
@@ -18,6 +18,17 @@
     <!-- Stylesheet -->
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
+    <header><h1 class="hero"> 10 Things To Do In Toronto </h1>
+    </header>
+<body>
+    <div class="container-avatar">
+        <div class="avatar">
+                Hi
+            <div class="avatar-inner">
+                <!-- USE JUST ENCASE -->
+            </div>
+        </div>
+    </div>
 
 <body>
 
@@ -25,7 +36,7 @@
  
     <header id="headerTO" class="header sticky top-0 bg-white shadow-md flex items-center justify-between px-8 py-02">
         <!-- logo to be added-->
-        <h1 class="w-1/4" id="avatar"> 10 Things To Do In Toronto </h1>
+        <h1 class="w-1/4" class="avatar"> </h1>
 
         <!-- navigation -->
         <nav class="nav font-semibold text-lg">
