Fixed button background color

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
     <h1 class="hero"> 10 Things To Do In Toronto </h1>
 </header>
 
-    <div class="container-avatar">
+    <!-- <div class="container-avatar">
         <div class="avatar">
             Hi
-            <div class="avatar-inner">
+            <div class="avatar-inner"> -->
                 <!-- USE JUST INCASE -->
             </div>
         </div>
