CSS-graddiant body and hero colour

--- a/index.html
+++ b/index.html
@@ -18,25 +18,23 @@
     <!-- Stylesheet -->
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
-    <header><h1 class="hero"> 10 Things To Do In Toronto </h1>
+    <header><div class="hero"> <h1>10 Things To Do In Toronto</h1></div>
     </header>
-<body>
-    <div class="container-avatar">
-        <div class="avatar">
-                Hi
-            <div class="avatar-inner">
-                <!-- USE JUST ENCASE -->
+    <!-- <body>
+        <div class="container-avatar">
+            <div class="avatar">
+                    Hi
+                <div class="avatar-inner">
+                </div>
             </div>
         </div>
-    </div>
-
-<body>
+    <body> -->
 
     <!--  Header & Sticky Navigation bar created with Tailwind CSS-->
  
     <header id="headerTO" class="header sticky top-0 bg-white shadow-md flex items-center justify-between px-8 py-02">
         <!-- logo to be added-->
-        <h1 class="w-1/4" class="avatar"> </h1>
+        <h1 class="w-1/4"></h1>
 
         <!-- navigation -->
         <nav class="nav font-semibold text-lg">
@@ -57,10 +55,8 @@
         </nav>
     </header>
 
-
-
     <main class="container">
-        <section class="row justify-center" id>
+        <section class="row justify-center">
             <!-- Section for List of Events, details being pulled from SeatGeek API -->
             <article id="event-list" class="container center" class="card-column">
                 <h4>List of Events</h4>
