--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
 
 
+
+
+
     <!-- Stylesheet -->
     <link rel="stylesheet" href="./assets/css/style.css">
 
@@ -29,9 +32,12 @@
     </script>
 </head>
 
-    <header><div class="hero"> <h1>10 Things To Do In Toronto</h1></div>
-    </header>
-    <!-- <body>
+<header>
+    <div class="hero">
+        <h1>10 Things To Do In Toronto</h1>
+    </div>
+</header>
+<!-- <body>
         <div class="container-avatar">
             <div class="avatar">
                     Hi
@@ -45,23 +51,6 @@
 
 
 <body>
-
-    
-<header>
-    <h1 class="hero"> 10 Things To Do In Toronto </h1>
-</header>
-
-    <!-- <div class="container-avatar">
-        <div class="avatar">
-            Hi
-            <div class="avatar-inner"> -->
-                <!-- USE JUST INCASE -->
-            </div>
-        </div>
-    </div>
-
-
-
 
     <!--  Header, Sticky Navigation bar & light/dark toggle created with Tailwind CSS-->
 
@@ -103,20 +92,8 @@
         </nav>
     </header>
 
-
-    <main class="container">
-        <section class="row justify-center">
-            <!-- Section for List of Events, details being pulled from SeatGeek API -->
-            <article id="event-list" class="container center" class="card-column">
-                <h4>List of Events</h4>
-                <div id="event-buttons"></div>
-
-
-
-    <main id="light" class="bg-white dark:bg-gray-800">
-
-
-        <section id="dark" class="text-gray-600 dark:text-gray-300">
+    <main class="container" class="bg-white dark:bg-gray-800" id="light">
+        <section class="row justify-center text-gray-600 dark:text-gray-300" id="dark">
 
             <section class="row justify-center" id>
                 <!-- Section for List of Events, details being pulled from SeatGeek API -->
@@ -137,42 +114,18 @@
 
             <!-- Section that contains both the event details & map -->
             <section id="selected-event" class="container center">
-                <!-- Div of the details of the event> -->
 
-                <!-- Unordered list containing the pertinant event details for the user-->
-                <!-- <ul>
-                        <li id="event-category"></li>
-                        <li id="event-title"><a href="/"></a></li>
-                        <li id="event-date-time"></li>
-                        <li id="performer"></li>
-                        <li id="venue-name"></li>
-                        <li id="venue-address"></li>
-                        </ul>
-                    </div>
-                    </div> -->
-
-                <!--Div of the event-map, info being pulled from OpenStreetMap API-->
-                <!-- <figure class="textbox code-card" id="event-map">
-                    <h4 class="textbox-header">Event Map</h4>
-                    <aside class="textbox-body">
-                    <p>Location.</p>
-                    </aside>
-                     <pre class="textbox-body">
-                    <iframe id="embeddedMap" width="425" height="350" frameborder="0" scrolling="no" marginheight="0"
-                    marginwidth="0" style="border: 1px solid black"></iframe>
-                    </pre>
-                    </figure> -->
             </section>
 
         </section>
-
     </main>
+
 
     <!--Jquery <script> tag -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
     <!--Tailwind <script> tag-->
-    <script src=“https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.3/flowbite.min.js”></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.3/flowbite.min.js"></script>
 
     <!-- Link the DayJS library -->
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
@@ -180,6 +133,7 @@
 
     <!--Our javascript tag-->
     <script src="./assets/js/script.js"></script>
+
 
 
 
