--- a/index.html
+++ b/index.html
@@ -32,123 +32,113 @@
     </script>
 </head>
 
-<header>
-    <div class="hero">
-        <h1>10 Things To Do In Toronto</h1>
-    </div>
-</header>
-<!-- <body>
-        <div class="container-avatar">
-            <div class="avatar">
-                    Hi
-                <div class="avatar-inner">
-                </div>
+
+<body class="light">
+    <div >
+
+        <header>
+            <div class="hero">
+                <h1>10 Things To Do In Toronto</h1>
             </div>
-        </div>
-    <body> -->
+        </header>
 
+        <!-- Sticky Navigation bar & light/dark toggle created with Tailwind CSS-->
 
+        <section id="headerTO"
+            class="header sticky top-0 bg-white shadow-md flex items-center justify-between px-8 py-02">
+            <!-- logo to be added-->
+            <h1 class="w-1/4"></h1>
 
-
-<body>
-
-    <!--  Header, Sticky Navigation bar & light/dark toggle created with Tailwind CSS-->
-
-    <header id="headerTO" class="header sticky top-0 bg-white shadow-md flex items-center justify-between px-8 py-02">
-        <!-- logo to be added-->
-        <h1 class="w-1/4"></h1>
-
-        <!-- navigation -->
-        <nav class="nav font-semibold text-lg">
-            <menu class="flex items-center list-none">
-                <li>
-                    <button id="theme-toggle" type="button"
-                        class="text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5">
-                        <svg id="theme-toggle-dark-icon" class="hidden w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
-                            xmlns="http://www.w3.org/2000/svg">
-                            <path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"></path>
-                        </svg>
-                        <svg id="theme-toggle-light-icon" class="hidden w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
-                            xmlns="http://www.w3.org/2000/svg">
-                            <path
-                                d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z"
-                                fill-rule="evenodd" clip-rule="evenodd"></path>
-                        </svg>
-                    </button>
-                </li>
-                <li
-                    class="p-4 border-b-2 border-orange-500 border-opacity-0 hover:border-opacity-100 hover:text-orange-500 duration-200 cursor-pointer active">
-                    <a href="#event-list">Event List</a>
-                </li>
-                <li
-                    class="p-4 border-b-2 border-orange-500 border-opacity-0 hover:border-opacity-100 hover:text-orange-500 duration-200 cursor-pointer">
-                    <a href="#search-history">Saved Events</a>
-                </li>
-                <li
-                    class="p-4 border-b-2 border-orange-500 border-opacity-0 hover:border-opacity-100 hover:text-orange-500 duration-200 cursor-pointer">
-                    <a href="#selected-event">Event Details</a>
-                </li>
-            </menu>
-        </nav>
-    </header>
-
-    <main class="container" class="bg-white dark:bg-gray-800" id="light">
-        <section class="row justify-center text-gray-600 dark:text-gray-300" id="dark">
-
-            <section class="row justify-center" id>
-                <!-- Section for List of Events, details being pulled from SeatGeek API -->
-                <article id="event-list" class="container center" class="card-column">
-                    <h4>List of Events</h4>
-                    <div id="event-buttons"></div>
-
-                </article>
-
-                <!-- Section for Search History of Past Events  -->
-                <article id="search-history" class="container center">
-                    <h4>Search History</h4>
-                    <div id="search-buttons"></div>
-
-                </article>
-            </section>
-
-
-            <!-- Section that contains both the event details & map -->
-            <section id="selected-event" class="container center">
-
-            </section>
-
+            <!-- navigation -->
+            <nav class="nav font-semibold text-lg">
+                <menu class="flex items-center list-none">
+                    <li>
+                        <button id="theme-toggle" type="button"
+                            class="text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5">
+                            <svg id="theme-toggle-dark-icon" class="hidden w-5 h-5" fill="currentColor"
+                                viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"></path>
+                            </svg>
+                            <svg id="theme-toggle-light-icon" class="hidden w-5 h-5" fill="currentColor"
+                                viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z"
+                                    fill-rule="evenodd" clip-rule="evenodd"></path>
+                            </svg>
+                        </button>
+                    </li>
+                    <li
+                        class="p-4 border-b-2 border-orange-500 border-opacity-0 hover:border-opacity-100 hover:text-orange-500 duration-200 cursor-pointer active">
+                        <a href="#event-list">Event List</a>
+                    </li>
+                    <li
+                        class="p-4 border-b-2 border-orange-500 border-opacity-0 hover:border-opacity-100 hover:text-orange-500 duration-200 cursor-pointer">
+                        <a href="#search-history">Saved Events</a>
+                    </li>
+                    <li
+                        class="p-4 border-b-2 border-orange-500 border-opacity-0 hover:border-opacity-100 hover:text-orange-500 duration-200 cursor-pointer">
+                        <a href="#selected-event">Event Details</a>
+                    </li>
+                </menu>
+            </nav>
         </section>
-    </main>
 
+        <main class="container">
+            <section class="row justify-center" >
 
-    <!--Jquery <script> tag -->
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+                <section class="row justify-center" id>
+                    <!-- Section for List of Events, details being pulled from SeatGeek API -->
+                    <article id="event-list" class="container center" class="card-column">
+                        <h2>List of Events</h2>
+                        <div id="event-buttons"></div>
 
-    <!--Tailwind <script> tag-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.3/flowbite.min.js"></script>
+                    </article>
 
-    <!-- Link the DayJS library -->
-    <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
-        integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
+                    <!-- Section for Search History of Past Events  -->
+                    <article id="search-history" class="container center">
+                        <h2>Search History</h2>
+                        <div id="search-buttons"></div>
 
-    <!--Our javascript tag-->
-    <script src="./assets/js/script.js"></script>
+                    </article>
+                </section>
 
+                <!-- Section that contains both the event details & map -->
+                <section id="selected-event" class="container center">
 
+                </section>
 
-
-    <!--Footer section-->
-    <footer>
-        <section class="footer" id="footer">
-            <section class="form-footer">
-                <h5>Created by Thomas Calle, Shohei Mochizuki & Rebecca Lawrence</h5>
-                <p>
-                <h6>&copy; 2023 Team 7even. Confidential and Proprietary. All Rights Reserved.</h6>
-                </p>
             </section>
-        </section>
-    </footer>
+        </main>
 
+
+        <!--Jquery <script> tag -->
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+
+        <!--Tailwind <script> tag-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.3/flowbite.min.js"></script>
+
+        <!-- Link the DayJS library -->
+        <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
+            integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
+
+        <!--Our javascript tag-->
+        <script src="./assets/js/script.js"></script>
+
+
+
+
+        <!--Footer section-->
+        <footer>
+            <section class="footer" id="footer">
+                <section class="form-footer">
+                    <h5>Created by Thomas Calle, Shohei Mochizuki & Rebecca Lawrence</h5>
+                    <p>
+                    <h6>&copy; 2023 Team 7even. Confidential and Proprietary. All Rights Reserved.</h6>
+                    </p>
+                </section>
+            </section>
+        </footer>
+    </div>
 </body>
 
 </html>
