--- a/index.html
+++ b/index.html
@@ -1,26 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>10 Things TO Do In Toronto</title>
-
     <!-- jQuery UI <link> tag -->
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <!-- Tailwind CSS <link> tag-->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.3/flowbite.min.css" rel="stylesheet" />
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
-
-
-
-
-
     <!-- Stylesheet -->
     <link rel="stylesheet" href="./assets/css/style.css">
-
-
     <!-- On page load or when changing themes, best to add inline in hea` to avoid FOUC-flash of unstyle content  -->
     <script>
 
@@ -31,19 +22,17 @@
         }
     </script>
 </head>
-
-
 <body class="light">
     <div >
-
         <header>
             <div class="hero">
-                <h1>10 Things To Do In Toronto</h1>
+                <h1>10 Things To Do
+                    <br> In Toronto</div></h1>
             </div>
         </header>
-
+        <br> 
+        <br>
         <!-- Sticky Navigation bar & light/dark toggle created with Tailwind CSS-->
-
         <section id="headerTO"
             class="header sticky top-0 bg-white shadow-md flex items-center justify-between px-8 py-02">
             <!-- logo to be added-->
@@ -91,42 +80,27 @@
                     <article id="event-list" class="container center" class="card-column">
                         <h2>List of Events</h2>
                         <div id="event-buttons"></div>
-
                     </article>
-
                     <!-- Section for Search History of Past Events  -->
                     <article id="search-history" class="container center">
                         <h2>Search History</h2>
                         <div id="search-buttons"></div>
-
                     </article>
                 </section>
-
                 <!-- Section that contains both the event details & map -->
                 <section id="selected-event" class="container center">
-
                 </section>
-
             </section>
         </main>
-
-
         <!--Jquery <script> tag -->
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-
         <!--Tailwind <script> tag-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.3/flowbite.min.js"></script>
-
         <!-- Link the DayJS library -->
         <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
             integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
-
         <!--Our javascript tag-->
         <script src="./assets/js/script.js"></script>
-
-
-
-
         <!--Footer section-->
         <footer>
             <section class="footer" id="footer">
