--- a/index.html
+++ b/index.html
@@ -12,17 +12,9 @@
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     <!-- Stylesheet -->
     <link rel="stylesheet" href="./assets/css/style.css">
-    <!-- On page load or when changing themes, best to add inline in hea` to avoid FOUC-flash of unstyle content  -->
-    <script>
 
-        if (localStorage.getItem('color-theme') === 'dark' || (!('color-theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
-            document.documentElement.classList.add('dark');
-        } else {
-            document.documentElement.classList.remove('dark')
-        }
-    </script>
 </head>
-<body class="light">
+<body class="light" onload ="onPageLoad()">
     <div >
         <header>
             <div class="hero">
@@ -94,8 +86,10 @@
         </main>
         <!--Jquery <script> tag -->
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-        <!--Tailwind <script> tag-->
+        <!--Flowbite <script> tag-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.3/flowbite.min.js"></script>
+
+
         <!-- Link the DayJS library -->
         <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
             integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
