--- a/index.html
+++ b/index.html
@@ -71,11 +71,28 @@
                 </menu>
             </nav>
         </section>
-
+<!-- COLOR MODE -->
+<!-- COLOR MODE -->
+<form class="color-picker" action="">
+    <fieldset>
+      <legend class="visually-hidden">Pick a color scheme</legend>
+      <label for="light" class="visually-hidden">Light</label>
+      <input type="radio" name="theme" id="light" checked>
+  
+      <label for="pink" class="visually-hidden">Pink theme</label>
+      <input type="radio" id="pink" name="theme">
+  
+      <label for="dark" class="visually-hidden">Dark theme</label>
+      <input type="radio" id="dark" name="theme">
+    </fieldset>
+  </form>
         <main class="container">
             <section class="row justify-center" >
 
                 <section class="row justify-center" id>
+
+                    <!-- COLOR MODE  -->
+                    <!-- COLOR MODE -->
                     <!-- Section for List of Events, details being pulled from SeatGeek API -->
                     <article id="event-list" class="container center" class="card-column">
                         <h2>List of Events</h2>
@@ -102,6 +119,7 @@
         <!--Our javascript tag-->
         <script src="./assets/js/script.js"></script>
         <!--Footer section-->
+          <main>
         <footer>
             <section class="footer" id="footer">
                 <section class="form-footer">
