--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>10 Things TO Do In Toronto</title>
+    <title>10 Things To Do In Toronto</title>
     <!-- jQuery UI <link> tag -->
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <!-- Tailwind CSS <link> tag-->
@@ -14,117 +15,126 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 
 </head>
-<body class="light" onload ="onPageLoad()">
-    <div >
-        <header>
-            <div class="hero">
-                <h1>10 Things To Do
-                    <br> In Toronto</div></h1>
-            </div>
-        </header>
-        <br> 
-        <br>
-        <!-- Sticky Navigation bar & light/dark toggle created with Tailwind CSS-->
-        <section id="headerTO"
-            class="header sticky top-0 bg-white shadow-md flex items-center justify-between px-8 py-02">
-            <!-- logo to be added-->
-            <h1 class="w-1/4"></h1>
 
-            <!-- navigation -->
-            <nav class="nav font-semibold text-lg">
-                <menu class="flex items-center list-none">
-                    <li>
-                        <button id="theme-toggle" type="button"
-                            class="text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5">
-                            <svg id="theme-toggle-dark-icon" class="hidden w-5 h-5" fill="currentColor"
-                                viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"></path>
-                            </svg>
-                            <svg id="theme-toggle-light-icon" class="hidden w-5 h-5" fill="currentColor"
-                                viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                                <path
-                                    d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z"
-                                    fill-rule="evenodd" clip-rule="evenodd"></path>
-                            </svg>
-                        </button>
-                    </li>
-                    <li
-                        class="p-4 border-b-2 border-orange-500 border-opacity-0 hover:border-opacity-100 hover:text-orange-500 duration-200 cursor-pointer active">
-                        <a href="#event-list">Event List</a>
-                    </li>
-                    <li
-                        class="p-4 border-b-2 border-orange-500 border-opacity-0 hover:border-opacity-100 hover:text-orange-500 duration-200 cursor-pointer">
-                        <a href="#search-history">Saved Events</a>
-                    </li>
-                    <li
-                        class="p-4 border-b-2 border-orange-500 border-opacity-0 hover:border-opacity-100 hover:text-orange-500 duration-200 cursor-pointer">
-                        <a href="#selected-event">Event Details</a>
-                    </li>
-                </menu>
-            </nav>
+<!-- defines the light color to the body of the page & runs the function that prevents flases of unstyle content-->
+<body class="light" onload="onPageLoad()">
+
+    <header>
+        <div class="hero">
+            <h1>10 Things To Do
+                <br> In Toronto
+            </h1>
+        </div>
+    </header>
+
+    <br>
+    <br>
+
+
+    <!-- Sticky Navigation bar & light/dark toggle created with Tailwind CSS-->
+    <section id="headerTO" class="header sticky top-0 bg-white shadow-md flex items-center justify-between px-8 py-02">
+        <!-- logo to be added-->
+        <h1 class="w-1/4"></h1>
+
+        <!-- navigation bar -->
+        <nav class="nav font-semibold text-lg">
+            <menu class="flex items-center list-none">
+                <li>
+                    <button id="theme-toggle" type="button"
+                        class="text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5">
+                        <svg id="theme-toggle-dark-icon" class="hidden w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"></path>
+                        </svg>
+                        <svg id="theme-toggle-light-icon" class="hidden w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z"
+                                fill-rule="evenodd" clip-rule="evenodd"></path>
+                        </svg>
+                    </button>
+                </li>
+                <li
+                    class="p-4 border-b-2 border-orange-500 border-opacity-0 hover:border-opacity-100 hover:text-orange-500 duration-200 cursor-pointer active">
+                    <a href="#event-list">Event List</a>
+                </li>
+                <li
+                    class="p-4 border-b-2 border-orange-500 border-opacity-0 hover:border-opacity-100 hover:text-orange-500 duration-200 cursor-pointer">
+                    <a href="#search-history">Saved Events</a>
+                </li>
+                <li
+                    class="p-4 border-b-2 border-orange-500 border-opacity-0 hover:border-opacity-100 hover:text-orange-500 duration-200 cursor-pointer">
+                    <a href="#selected-event">Event Details</a>
+                </li>
+            </menu>
+        </nav>
+    </section>
+
+    <!-- COLOR MODE -->
+    <form class="color-picker" action="">
+        <fieldset>
+            <legend class="visually-hidden">Pick a color scheme</legend>
+            <label for="light" class="visually-hidden">Light</label>
+            <input type="radio" name="theme" id="light" checked>
+
+            <label for="pink" class="visually-hidden">Pink theme</label>
+            <input type="radio" id="pink" name="theme">
+
+            <label for="dark" class="visually-hidden">Dark theme</label>
+            <input type="radio" id="dark" name="theme">
+        </fieldset>
+    </form>
+
+    <!--Main content of the page -->
+    <main class="container">
+        <section class="row justify-center">
+
+            <section class="row justify-center" id>
+
+                <!-- Section for List of Events, details being pulled from SeatGeek API -->
+                <article id="event-list" class="container center" class="card-column">
+                    <h2>List of Events</h2>
+                    <div id="event-buttons"></div>
+                </article>
+
+                <!-- Section for Search History of Past Events  -->
+                <article id="search-history" class="container center">
+                    <h2>Search History</h2>
+                    <div id="search-buttons"></div>
+                </article>
+            </section>
+
+            <!-- Section that contains both the event details & map -->
+            <section id="selected-event" class="container center">
+            </section>
         </section>
-<!-- COLOR MODE -->
-<!-- COLOR MODE -->
-<form class="color-picker" action="">
-    <fieldset>
-      <legend class="visually-hidden">Pick a color scheme</legend>
-      <label for="light" class="visually-hidden">Light</label>
-      <input type="radio" name="theme" id="light" checked>
-  
-      <label for="pink" class="visually-hidden">Pink theme</label>
-      <input type="radio" id="pink" name="theme">
-  
-      <label for="dark" class="visually-hidden">Dark theme</label>
-      <input type="radio" id="dark" name="theme">
-    </fieldset>
-  </form>
-        <main class="container">
-            <section class="row justify-center" >
+    </main>
 
-                <section class="row justify-center" id>
 
-                    <!-- COLOR MODE  -->
-                    <!-- COLOR MODE -->
-                    <!-- Section for List of Events, details being pulled from SeatGeek API -->
-                    <article id="event-list" class="container center" class="card-column">
-                        <h2>List of Events</h2>
-                        <div id="event-buttons"></div>
-                    </article>
-                    <!-- Section for Search History of Past Events  -->
-                    <article id="search-history" class="container center">
-                        <h2>Search History</h2>
-                        <div id="search-buttons"></div>
-                    </article>
-                </section>
-                <!-- Section that contains both the event details & map -->
-                <section id="selected-event" class="container center">
-                </section>
+    <!--Jquery <script> tag -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <!--Flowbite <script> tag-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.3/flowbite.min.js"></script>
+    <!-- Link the DayJS library -->
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
+        integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
+    <!--Our javascript tag-->
+    <script src="./assets/js/script.js"></script>
+    <!--Footer section-->
+
+
+
+    <footer>
+        <section class="footer" id="footer">
+            <section class="form-footer">
+                <h5>Created by Thomas Calle, Shohei Mochizuki & Rebecca Lawrence</h5>
+                <p>
+                <h6>&copy; 2023 Team 7even. Confidential and Proprietary. All Rights Reserved.</h6>
+                </p>
             </section>
-        </main>
-        <!--Jquery <script> tag -->
-        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-        <!--Flowbite <script> tag-->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.3/flowbite.min.js"></script>
+        </section>
+    </footer>
 
-
-        <!-- Link the DayJS library -->
-        <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
-            integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
-        <!--Our javascript tag-->
-        <script src="./assets/js/script.js"></script>
-        <!--Footer section-->
-          <main>
-        <footer>
-            <section class="footer" id="footer">
-                <section class="form-footer">
-                    <h5>Created by Thomas Calle, Shohei Mochizuki & Rebecca Lawrence</h5>
-                    <p>
-                    <h6>&copy; 2023 Team 7even. Confidential and Proprietary. All Rights Reserved.</h6>
-                    </p>
-                </section>
-            </section>
-        </footer>
-    </div>
 </body>
 
 </html>
